--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!------------------------------------------------------------------->
   <div class="news" id="nav-info">
    <p style="color:#dd0000; font-weight: 500;">
-    I was recently awarded the National Science Centre (NCN) SONATA BIS 13 grant "<i>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</i>". <b>I have openings for two PhD students (4&nbspyears scholarship; starting in autumn 2025) and one PostDoc (2&nbspyears contract).</b> Write me an e-mail (jacek.herbrych  <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z" style="fill:rgb(221,0,0);"/></svg>  pwr.edu.pl) if you are interested.<br>
+    I was recently awarded the National Science Centre (NCN) SONATA BIS 13 grant "<i>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</i>". <b>I have openings for two PhD students (4&nbspyears scholarship; starting in autumn 2025) and one PostDoc (2&nbspyears contract).</b><br>
     The positions are announced here:<br>
      &#9900; <b>PhD positions:</b>
      &#9900; <a href="https://euraxess.ec.europa.eu/jobs/312102" target="blank_">EURAXESS webpage</a>
@@ -45,6 +45,7 @@
      &#9900; <a href="https://www2.ncn.gov.pl/baza-ofert/?akcja=wyswietl&id=227293" target="blank_">NCN webpage</a>
      &#9900; <a href="https://ofertypracy.pwr.edu.pl/offer/b63c6a68-6b93-48c2-85a0-23eefb3c56f0/view/" target="blank_">WUST webpage</a>
      &#9900;
+     <br>Write me an e-mail (jacek.herbrych&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z" style="fill:rgb(221,0,0);"/></svg>&nbsp;pwr.edu.pl) if you are interested.<br>
    </p>
   </div> <!-- news -->
   <div class="info" id="nav-info">
