--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
     <br><a class="tooltip">Me :)<span><img src="pic/jacek.jpg" style="height:300px; border: 10px solid #444;"></span></a>
     <!--<br><u>PhD students</u>-->
     <br><u>Master students</u>
+    <br>&emsp;&emsp;&#9900; Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
+    <br>&emsp;&emsp;&#9900; Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
     <br>&emsp;&emsp;&#9900; Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
     <br><u>Diploma students</u>
     <br>&emsp;&emsp;&#9900; Dawid Dworzański - <em>Community detection in strongly correlated systems</em>
-    <br><u>Student project</u>
     <br>&emsp;&emsp;&#9900; Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
+    <br>&emsp;&emsp;&#9900; Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
     <br>&emsp;&emsp;&#9900; Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
-    <br>&emsp;&emsp;&#9900; Jakub Wawruszczak - <em>Schrödinger-Feynman approach to nearly-integrable systems</em>
+<!--    <br><u>Student project</u> -->
    </p>
    <p>
     <b>Past</b>
@@ -257,14 +259,14 @@
   <div class="publications" id="nav-publications">
    <h3>&#9702; publications</h3>
    <p>
-    <a onclick="allpub()">see <b>all</b> publications</a>
-    <br><a href="#nav-publications" onclick="ncn2024()">
+    &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a>
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()">
      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg>
      see publications supported by <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> grant (2024 - 2029)</a> 
-    <br><a href="#nav-publications" onclick="ncn2020()">
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()">
      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(35,148,178);"/></g></svg>
      see publications supported by <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> grant (2020 - 2023)</a> 
-    <br><a href="#nav-publications" onclick="nawa2019()">
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()">
      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px"viewBox="0 0 980 248" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,1743.83,-408.742)"><path d="M224.055,260.352L256.066,260.352L279.103,282.578L273.806,216.418L224.055,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,2721.62,-218.794)"><path d="M345.817,260.352L377.828,260.352L400.865,282.578L395.567,216.418L345.817,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.752)"><path d="M218.611,214.261L218.611,249.845L179.09,214.261L179.09,273.632L188.97,273.632L188.97,238.152L228.491,273.691L228.491,214.261L218.611,214.261Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.268)"><path d="M360.837,214.203L342.191,251.421L329.042,225.271L323.471,236.415L342.191,273.632L371.906,214.203L360.837,214.203Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.314)"><path d="M304.873,251.379L286.179,214.214L275.11,214.214L299.285,262.489L304.856,273.632L315.286,252.805L309.752,241.679L304.873,251.379Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g></svg>
      see publications supported by <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> grant (2019 - 2022)</a> 
    </p>
@@ -277,7 +279,7 @@
    <p class="ncn2024">
     (-) 
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg>
-    <b>Magnon damping and mode softening in quantum double-exchange ferromagnets without Jahn-Teller phonons</b>
+    <b>Magnon damping and mode softening in quantum double-exchange ferromagnets</b>
     <br>A. Moreo, E. Dagotto, G. Alvarez, T. Tohyama, M. Mierzejewski, and <u>J. Herbrych</u>
     <br><a href="http://arxiv.org/abs/2503.01277" target="blank_">arXiv: cond-mat/2503.01277</a>
    </p>
