--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!------------------------------------------------------------------->
   <div class="news" id="nav-info">
    <p style="color:#dd0000; font-weight: 500;">
-    I was recently awarded the National Science Centre (NCN) SONATA BIS 13 grant "<i>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</i>". <b>I have openings for two PhD students (4&nbspyears scholarship; starting in autumn 2025) and one PostDoc (2&nbspyears contract).</b><br>
+    I was awarded the National Science Centre (NCN) SONATA BIS 13 grant "<i>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</i>". <b>I have openings for two PhD students (4&nbspyears scholarship; starting in autumn 2025) and one PostDoc position (2&nbspyears contract).</b><br>
     The positions are announced here:<br>
      &#9900; <b>PhD positions:</b>
      &#9900; <a href="https://euraxess.ec.europa.eu/jobs/312102" target="blank_">EURAXESS webpage</a>
@@ -49,11 +49,11 @@
    </p>
   </div> <!-- news -->
   <div class="info" id="nav-info">
-   <h3>&#9702; info</h3>
+   <h3>&emsp;&#9702; info</h3>
    <p>
     <b>Contact:</b> jacek.herbrych <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z"/></svg> pwr.edu.pl<br>
     <b>Address:</b>
-     Office A1.262<br>
+     Office A1.262D<br>
      Politechnika Wrocławska<br>
      Wyb. Stanisława Wyspiańskiego 27<br>
      50-370 Wrocław, Poland
@@ -112,7 +112,7 @@
   </div> <!-- info -->
 <!------------------------------------------------------------------->
   <div class="teaching" id="nav-teaching">
-   <h3>&#9702; teaching</h3>
+   <h3>&emsp;&#9702; teaching</h3>
    <p>
     <b>Bachelor courses</b>
     <br>&emsp;&#9900; Quantum Mechanics I & II
@@ -127,7 +127,7 @@
   </div> <!-- teaching -->
 <!------------------------------------------------------------------->
   <div class="research" id="nav-research">
-   <h3>&#9702; research interest</h3>
+   <h3>&emsp;&#9702; research interest</h3>
    <p>
     &#9900; <b>Strongly correlated multi-orbital systems</b><br>
     Past experience in strongly correlated quantum systems, especially Cu-based materials, showed that the high-temperature superconductivity is closely connected to a bad-metal state and a nearby antiferromagnetic order. As such, there has been a considerable effort devoted to the understanding of the electron correlation effects and the associated magnetism. On the other hand, the multi-orbital system properties, relevant for Fe-based materials, are much less explored. Iron-based superconductors display various phases originating in the multi-orbital nature of iron itself, and as a consequence, in the competition between electronic, orbital, and spin degrees of freedom. Prominent among these novel effects is the orbital-selective Mott phase (OSMP), where electronic correlations cause a unique mixture of metallic and insulating behaviour.
@@ -190,7 +190,7 @@
   </div> <!-- research -->
 <!------------------------------------------------------------------>
   <div class="funding" id="nav-funding">
-   <h3>&#9702; funding</h3>
+   <h3>&emsp;&#9702; funding</h3>
    <p>
     <div class="twotab">
      <div style="width:250px;">
@@ -257,22 +257,33 @@
   </div> <!-- funding -->
 <!------------------------------------------------------------------->
   <div class="publications" id="nav-publications">
-   <h3>&#9702; publications</h3>
-   <p>
-    &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a>
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()">
-     see publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> grant (2024 - 2029)</a> 
+   <h3>&emsp;&#9702; publications</h3>
+   <p class="headallpub">
+     &emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()">
+     see only publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> grant (2024 - 2029)</a> 
     <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()">
-     see publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(35,148,178);"/></g></svg> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> grant (2020 - 2023)</a> 
+     see only publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(35,148,178);"/></g></svg> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> grant (2020 - 2023)</a> 
     <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()">
-     see publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px"viewBox="0 0 980 248" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,1743.83,-408.742)"><path d="M224.055,260.352L256.066,260.352L279.103,282.578L273.806,216.418L224.055,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,2721.62,-218.794)"><path d="M345.817,260.352L377.828,260.352L400.865,282.578L395.567,216.418L345.817,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.752)"><path d="M218.611,214.261L218.611,249.845L179.09,214.261L179.09,273.632L188.97,273.632L188.97,238.152L228.491,273.691L228.491,214.261L218.611,214.261Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.268)"><path d="M360.837,214.203L342.191,251.421L329.042,225.271L323.471,236.415L342.191,273.632L371.906,214.203L360.837,214.203Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.314)"><path d="M304.873,251.379L286.179,214.214L275.11,214.214L299.285,262.489L304.856,273.632L315.286,252.805L309.752,241.679L304.873,251.379Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g></svg> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> grant (2019 - 2022)</a> 
+     see only publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px"viewBox="0 0 980 248" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,1743.83,-408.742)"><path d="M224.055,260.352L256.066,260.352L279.103,282.578L273.806,216.418L224.055,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,2721.62,-218.794)"><path d="M345.817,260.352L377.828,260.352L400.865,282.578L395.567,216.418L345.817,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.752)"><path d="M218.611,214.261L218.611,249.845L179.09,214.261L179.09,273.632L188.97,273.632L188.97,238.152L228.491,273.691L228.491,214.261L218.611,214.261Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.268)"><path d="M360.837,214.203L342.191,251.421L329.042,225.271L323.471,236.415L342.191,273.632L371.906,214.203L360.837,214.203Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.314)"><path d="M304.873,251.379L286.179,214.214L275.11,214.214L299.285,262.489L304.856,273.632L315.286,252.805L309.752,241.679L304.873,251.379Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g></svg> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> grant (2019 - 2022)</a> 
+   </p>
+   <p class="headncn2024">
+     &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
+    <b><u>List of publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> grant (2024 - 2029)</a>:</u></b>
+   </p>
+   <p class="headncn2020">
+     &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
+     <b><u>List of publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(35,148,178);"/></g></svg> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> grant (2020 - 2023)</a>:</u></b>
+   </p>
+   <p class="headnawa2019">
+     &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
+    <b><u>List of publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px"viewBox="0 0 980 248" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,1743.83,-408.742)"><path d="M224.055,260.352L256.066,260.352L279.103,282.578L273.806,216.418L224.055,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,2721.62,-218.794)"><path d="M345.817,260.352L377.828,260.352L400.865,282.578L395.567,216.418L345.817,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.752)"><path d="M218.611,214.261L218.611,249.845L179.09,214.261L179.09,273.632L188.97,273.632L188.97,238.152L228.491,273.691L228.491,214.261L218.611,214.261Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.268)"><path d="M360.837,214.203L342.191,251.421L329.042,225.271L323.471,236.415L342.191,273.632L371.906,214.203L360.837,214.203Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.314)"><path d="M304.873,251.379L286.179,214.214L275.11,214.214L299.285,262.489L304.856,273.632L315.286,252.805L309.752,241.679L304.873,251.379Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g></svg> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> grant (2019 - 2022)</a>:</u></b>
    </p>
    <p class="allpub">
-<!--    (-) 
+    (preprint) 
     <b>Tunable Hilbert space fragmentation and extended critical regime</b>
     <br>M. Lisiecki, J. Bonča, M. Mierzejewski, <u>J. Herbrych</u>, and P. Łydżba
-    <br><a href="http://arxiv.org/abs/2505.XXXXX" target="blank_">arXiv: cond-mat/2505.XXXXX</a>
-   </p> -->
+    <br><a href="http://arxiv.org/abs/2505.09346" target="blank_">arXiv: cond-mat/2505.09346</a>
+   </p>
    <p class="allpub">
     (preprint) 
     <b>Algorithm for finding local integrals of motion in quantum lattice models in the thermodynamic limit</b>
@@ -698,6 +709,10 @@
   var vnawa2019 = document.getElementsByClassName("nawa2019");
   var vncn2020 = document.getElementsByClassName("ncn2020");
   var vncn2024 = document.getElementsByClassName("ncn2024");
+  var vheadallpub = document.getElementsByClassName("headallpub");
+  var vheadnawa2019 = document.getElementsByClassName("headnawa2019");
+  var vheadncn2020 = document.getElementsByClassName("headncn2020");
+  var vheadncn2024 = document.getElementsByClassName("headncn2024");
   function hideTag(tagName) {
     for(let i=0;i<tagName.length;i++){
         tagName[i].style.display = 'none'
@@ -713,24 +728,44 @@
     showTag(vncn2020)
     showTag(vnawa2019)
     showTag(vall)
+
+    hideTag(vheadncn2024)
+    hideTag(vheadncn2020)
+    hideTag(vheadnawa2019)
+    showTag(vheadallpub)
   }
   function nawa2019() {
     hideTag(vall)
     hideTag(vncn2020)
     hideTag(vncn2024)
     showTag(vnawa2019)
+
+    hideTag(vheadallpub)
+    hideTag(vheadncn2020)
+    hideTag(vheadncn2024)
+    showTag(vheadnawa2019)
   }
   function ncn2020() {
     hideTag(vall)
     hideTag(vnawa2019)
     hideTag(vncn2024)
     showTag(vncn2020)
+
+    hideTag(vheadallpub)
+    hideTag(vheadnawa2019)
+    hideTag(vheadncn2024)
+    showTag(vheadncn2020)
   }
   function ncn2024() {
     hideTag(vall)
     hideTag(vnawa2019)
     hideTag(vncn2020)
     showTag(vncn2024)
+
+    hideTag(vheadallpub)
+    hideTag(vheadnawa2019)
+    hideTag(vheadncn2020)
+    showTag(vheadncn2024)
   }
  </script>
 <!------------------------------------------------------------------->
