--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg>
     <b>Magnon damping and mode softening in quantum double-exchange ferromagnets</b>
     <br>A. Moreo, E. Dagotto, G. Alvarez, T. Tohyama, M. Mierzejewski, and <u>J. Herbrych</u>
-    <br><a href="https://iopscience.iop.org/article/10.1088/1361-6633/add6d4" target="blank_">Rep. Prog. Phys. <b>XX</b>, XXXX (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2503.01277" target="blank_">arXiv: cond-mat/2503.01277</a>
+    <br><a href="https://iopscience.iop.org/article/10.1088/1361-6633/add6d4" target="blank_">Rep. Prog. Phys. <b>88</b>, 068001 (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2503.01277" target="blank_">arXiv: cond-mat/2503.01277</a>
    </p>
    <p class="allpub">
     (54) 
