--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
     <br><a class="tooltip">Me :)<span><img src="pic/jacek.jpg" style="height:300px; border: 10px solid #444;"></span></a>
     <!--<br><u>PhD students</u>-->
     <br><u>Master students</u>
-    <br>&emsp;&emsp;&#9900; Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
-    <br>&emsp;&emsp;&#9900; Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
-    <br>&emsp;&emsp;&#9900; Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
+    <br>&emsp;&#9900; Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
+    <br>&emsp;&#9900; Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
+    <br>&emsp;&#9900; Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
     <br><u>Diploma students</u>
-    <br>&emsp;&emsp;&#9900; Dawid Dworzański - <em>Community detection in strongly correlated systems</em>
-    <br>&emsp;&emsp;&#9900; Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
-    <br>&emsp;&emsp;&#9900; Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
-    <br>&emsp;&emsp;&#9900; Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
+    <br>&emsp;&#9900; Dawid Dworzański - <em>Community detection in strongly correlated systems</em>
+    <br>&emsp;&#9900; Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
+    <br>&emsp;&#9900; Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
+    <br>&emsp;&#9900; Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
 <!--    <br><u>Student project</u> -->
    </p>
    <p>
     <b>Past</b>
     <br><u>PhD</u>
-    <br>&emsp;&emsp;&#9900; 2023 <a href="http://www.maksymiliansroda.pl" taget="_blank">Maksymilian Środa</a> <em>Electronic and magnetic properties of low-dimensional strongly correlated multiorbital systems</em>
+    <br>&emsp;&#9900; 2023 <a href="http://www.maksymiliansroda.pl" taget="_blank">Maksymilian Środa</a> <em>Electronic and magnetic properties of low-dimensional strongly correlated multiorbital systems</em>
     <br><u>Master</u>
-    <br>&emsp;&emsp;&#9900; 2021 Rafał Świętek <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
-    <br>&emsp;&emsp;&#9900; 2021 Łukasz Iwanek <em>Many-body mobility edge in random-exchange systems</em>
+    <br>&emsp;&#9900; 2021 Rafał Świętek <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
+    <br>&emsp;&#9900; 2021 Łukasz Iwanek <em>Many-body mobility edge in random-exchange systems</em>
     <br><u>Diploma</u>
-    <br>&emsp;&emsp;&#9900; 2025 Jakub Prokopczyk - <em>Spin dynamics of doped two-orbital Hubbard model</em>
-    <br>&emsp;&emsp;&#9900; 2025 Błażej Zdobylak - <em>Particle expansion in tight-binding quantum chaotic system</em>
-    <br>&emsp;&emsp;&#9900; 2024 Kacper Drabikowski <em>Correlation lengths within orbital-selective Mott phase</em>
-    <br>&emsp;&emsp;&#9900; 2024 Sami Elgalal <em>Impact of charge fluctuations on the Haldane phase</em>
-    <br>&emsp;&emsp;&#9900; 2023 Agnieszka Jażdżewska <em>Flocking: properties of inertia spin model</em>
-    <br>&emsp;&emsp;&#9900; 2021 Bartosz Grygielski <em>Spin textures induced by Majorana fermions</em>
-    <br>&emsp;&emsp;&#9900; 2019 Łukasz Iwanek <em>Many-body localization of the domain walls</em>
+    <br>&emsp;&#9900; 2025 Jakub Prokopczyk - <em>Spin dynamics of doped two-orbital Hubbard model</em>
+    <br>&emsp;&#9900; 2025 Błażej Zdobylak - <em>Particle expansion in tight-binding quantum chaotic system</em>
+    <br>&emsp;&#9900; 2024 Kacper Drabikowski <em>Correlation lengths within orbital-selective Mott phase</em>
+    <br>&emsp;&#9900; 2024 Sami Elgalal <em>Impact of charge fluctuations on the Haldane phase</em>
+    <br>&emsp;&#9900; 2023 Agnieszka Jażdżewska <em>Flocking: properties of inertia spin model</em>
+    <br>&emsp;&#9900; 2021 Bartosz Grygielski <em>Spin textures induced by Majorana fermions</em>
+    <br>&emsp;&#9900; 2019 Łukasz Iwanek <em>Many-body localization of the domain walls</em>
    </p>
    <div class="divend"></div>
   </div> <!-- info -->
