--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
    <h3>&emsp;&#9702; funding</h3>
    <p>
     <b>&#9900; Research projects:</b>
+   </p>
+   <p>
     <div class="twotab">
      <div style="width:250px;">
       <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="width:230px;"></a>
@@ -193,7 +195,7 @@
       <a href="https://ncn.gov.pl/?language=en" target="blank_">The National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_"><em>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</em></a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_">SONATA BIS 13 2023/50/E/ST3/00033</a>
-      <br>2024-2029, Wrocław University of Science and Technology, Poland
+      <br>2024 - 2029, Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
@@ -206,7 +208,7 @@
       <a href="https://ncn.gov.pl/?language=en" target="blank_">The National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_"><em>Magnetic properties  of strongly correlated multi-orbital systems</em></a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_">OPUS 18 2019/35/B/ST3/01207</a>
-      <br>2020-2023, Wrocław University of Science and Technology, Poland
+      <br>2020 - 2023, Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
@@ -224,6 +226,8 @@
    </p>
    <p style="margin-top:30px;">
     <b>&#9900; Other resources:</b>
+   </p>
+   <p>
     <div class="twotab">
      <div style="width:250px;">
       <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:220px;"></a>
