--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@
      &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
     <b><u>List of publications supported by <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px"viewBox="0 0 980 248" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,1743.83,-408.742)"><path d="M224.055,260.352L256.066,260.352L279.103,282.578L273.806,216.418L224.055,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(-3.86361,-1.56,-1.56,3.86361,2721.62,-218.794)"><path d="M345.817,260.352L377.828,260.352L400.865,282.578L395.567,216.418L345.817,260.352Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.752)"><path d="M218.611,214.261L218.611,249.845L179.09,214.261L179.09,273.632L188.97,273.632L188.97,238.152L228.491,273.691L228.491,214.261L218.611,214.261Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.268)"><path d="M360.837,214.203L342.191,251.421L329.042,225.271L323.471,236.415L342.191,273.632L371.906,214.203L360.837,214.203Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g><g transform="matrix(4.16667,0,0,4.16667,-746.208,-892.314)"><path d="M304.873,251.379L286.179,214.214L275.11,214.214L299.285,262.489L304.856,273.632L315.286,252.805L309.752,241.679L304.873,251.379Z" style="fill:rgb(103,164,55);fill-rule:nonzero;"/></g></svg> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> grant (2019 - 2022)</a>:</u></b>
    </p>
+<!--   <p class="ncn2024">
+    (preprint) 
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:serif="http://www.serif.com/" height="11px" viewBox="0 0 121 119" version="1.1" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g transform="matrix(4.16667,0,0,4.16667,0,118.287)"><path d="M0,-28.389L11.937,-28.389C13.607,-19.354 20.34,-12.168 28.98,-10.079L28.98,0L28.557,0L4.783,-18.671L4.783,0L0,0L0,-28.389ZM17.632,-28.389L28.98,-28.389L28.98,-15.878C23.384,-17.721 19.046,-22.462 17.632,-28.389M20.999,0L9.496,0L9.496,-8.861L20.999,0" style="fill:rgb(228,24,55);"/></g></svg>
+    <b>Doping S=1 antiferromagnet in one-dimension</b>
+    <br>J. Prokopczyk and <u>J. Herbrych</u>
+    <br><a href="http://arxiv.org/abs/2508.XXXXX" target="blank_">arXiv: cond-mat/2508.XXXXX</a>
+   </p> -->
    <p class="allpub">
     (preprint) 
     <b>Revisiting boundary-driven method for transport: Finite-size effects and the role of system-bath coupling</b>
@@ -313,7 +320,7 @@
     <b>Magnon damping and mode softening in quantum double-exchange ferromagnets</b>
     <br>A. Moreo, E. Dagotto, G. Alvarez, T. Tohyama, M. Mierzejewski, and <u>J. Herbrych</u>
     <br><a href="https://iopscience.iop.org/article/10.1088/1361-6633/add6d4" target="blank_">Rep. Prog. Phys. <b>88</b>, 068001 (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2503.01277" target="blank_">arXiv: cond-mat/2503.01277</a>
-    <br>Featured in <a href="https://physicsworld.com/a/new-mechanism-explains-behavior-of-materials-exhibiting-giant-magnetoresistance/" target="blank_">Physics Today</a>
+    <br>Featured in <a href="https://physicsworld.com/a/new-mechanism-explains-behaviour-of-materials-exhibiting-giant-magnetoresistance/" target="blank_">Physics Today</a>
    </p>
    <p class="allpub">
     (54) 
