--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="width:230px;"></a>
      </div>
      <div>
-      <a href="https://ncn.gov.pl/?language=en" target="blank_">The National Science Centre (NCN)</a>
+      <a href="https://ncn.gov.pl/?language=en" target="blank_">National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_">SONATA BIS 13 2023/50/E/ST3/00033</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_"><em>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</em></a>
       <br>2024 - 2029, Wrocław University of Science and Technology, Poland
@@ -205,7 +205,7 @@
       <a href="https://ncn.gov.pl/?language=en" target="blank_"><img class="grayscale" src="files/ncn.png" style="width:230px;"></a>
      </div>
      <div>
-      <a href="https://ncn.gov.pl/?language=en" target="blank_">The National Science Centre (NCN)</a>
+      <a href="https://ncn.gov.pl/?language=en" target="blank_">National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_">OPUS 18 2019/35/B/ST3/01207</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_"><em>Magnetic properties  of strongly correlated multi-orbital systems</em></a>
       <br>2020 - 2023, Wrocław University of Science and Technology, Poland
