--- a/index.html
+++ b/index.html
@@ -71,34 +71,28 @@
      <br>&emsp;&#9900; <a href="https://github.com/jacekherbrych/DataRepository" taget="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" width="12px"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" style="fill:rgb(68,68,68);"/></svg> GitHub data repository</a>
    </p>
    <p>
-    <b>&#9900; Group & projects</b>
-    <br><u>PhD students</u>
-    <br>&emsp;&#9900; Mateusz Lisiecki - <em>Doping of Kitaev-Heisenberg model</em>
-    <br><u>Master students</u>
-    <br>&emsp;&#9900; Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
-    <br>&emsp;&#9900; Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
-    <br>&emsp;&#9900; Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
-    <br><u>Diploma students</u>
-    <br>&emsp;&#9900; Dawid Dworzański - <em>Community detection in strongly correlated systems</em>
-    <br>&emsp;&#9900; Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
-    <br>&emsp;&#9900; Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
-    <br>&emsp;&#9900; Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
+    <b>&#9900; Group</b>
+    <br>&emsp;&#9900; (phd) Mateusz Lisiecki - <em>Doping of Kitaev-Heisenberg model</em>
+    <br>&emsp;&#9900; (master) Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
+    <br>&emsp;&#9900; (master) Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
+    <br>&emsp;&#9900; (master) Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
+    <br>&emsp;&#9900; (diploma) Dawid Dworzański - <em>Community detection in strongly correlated systems</em>
+    <br>&emsp;&#9900; (diploma) Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
+    <br>&emsp;&#9900; (diploma) Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
+    <br>&emsp;&#9900; (diploma) Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
    </p>
    <p>
     <b>&#9900; Past</b>
-    <br><u>PhD</u>
-    <br>&emsp;&#9900; 2023 <a href="http://www.maksymiliansroda.pl" target="_blank">Maksymilian Środa</a> - <em>Electronic and magnetic properties of low-dimensional strongly correlated multiorbital systems</em>
-    <br><u>Master</u>
-    <br>&emsp;&#9900; 2021 Rafał Świętek - <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
-    <br>&emsp;&#9900; 2021 Łukasz Iwanek - <em>Many-body mobility edge in random-exchange systems</em>
-    <br><u>Diploma</u>
-    <br>&emsp;&#9900; 2025 Jakub Prokopczyk - <em>Spin dynamics of doped two-orbital Hubbard model</em>
-    <br>&emsp;&#9900; 2025 Błażej Zdobylak - <em>Particle expansion in tight-binding quantum chaotic system</em>
-    <br>&emsp;&#9900; 2024 Kacper Drabikowski - <em>Correlation lengths within orbital-selective Mott phase</em>
-    <br>&emsp;&#9900; 2024 Sami Elgalal - <em>Impact of charge fluctuations on the Haldane phase</em>
-    <br>&emsp;&#9900; 2023 Agnieszka Jażdżewska - <em>Flocking: properties of inertia spin model</em>
-    <br>&emsp;&#9900; 2021 Bartosz Grygielski - <em>Spin textures induced by Majorana fermions</em>
-    <br>&emsp;&#9900; 2019 Łukasz Iwanek - <em>Many-body localization of the domain walls</em>
+    <br>&emsp;&#9900; (2023 phd) <a href="http://www.maksymiliansroda.pl" target="_blank">Maksymilian Środa</a> - <em>Electronic and magnetic properties of low-dimensional multiorbital systems</em>
+    <br>&emsp;&#9900; (2021 master) Rafał Świętek - <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
+    <br>&emsp;&#9900; (2021 master) Łukasz Iwanek - <em>Many-body mobility edge in random-exchange systems</em>
+    <br>&emsp;&#9900; (2025 diploma) Jakub Prokopczyk - <em>Spin dynamics of doped two-orbital Hubbard model</em>
+    <br>&emsp;&#9900; (2025 diploma) Błażej Zdobylak - <em>Particle expansion in tight-binding quantum chaotic system</em>
+    <br>&emsp;&#9900; (2024 diploma) Kacper Drabikowski - <em>Correlation lengths within orbital-selective Mott phase</em>
+    <br>&emsp;&#9900; (2024 diploma) Sami Elgalal - <em>Impact of charge fluctuations on the Haldane phase</em>
+    <br>&emsp;&#9900; (2023 diploma) Agnieszka Jażdżewska - <em>Flocking: properties of inertia spin model</em>
+    <br>&emsp;&#9900; (2021 diploma) Bartosz Grygielski - <em>Spin textures induced by Majorana fermions</em>
+    <br>&emsp;&#9900; (2019 diploma) Łukasz Iwanek - <em>Many-body localization of the domain walls</em>
    </p>
    <div class="divend"></div>
   </div> <!-- info -->
